--- a/products.html
+++ b/products.html
@@ -451,85 +451,6 @@ header {
   transform: translateX(-50%) scale(1.05);
 }
 
-@media (max-width: 480px){
-  body { font-size: 13px; }
-  
-  header { 
-    padding: 8px 3px; 
-    font-size: 16px;
-  }
-  
-  .header-buttons {
-    gap: 3px;
-  }
-  
-  .header-buttons button {
-    padding: 5px 8px;
-    font-size: 12px;
-  }
-  
-  #products-container { 
-    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); 
-    gap: 8px;
-    padding: 8px;
-  }
-  
-  .product img { height: 110px; }
-  
-  .product-info .name { 
-    font-size: 13px; 
-    height: 36px;
-  }
-  
-  .product-info .price { font-size: 13px; }
-  
-  .product button { font-size: 12px; }
-  
-  .modal-content {
-    padding: 12px;
-    margin: 10px auto;
-    width: 95%;
-  }
-  
-  .invoice-table {
-    font-size: 14px;
-  }
-  
-  .invoice-table th, 
-  .invoice-table td {
-    padding: 10px 8px;
-  }
-  
-  .invoice-title {
-    font-size: 24px;
-  }
-  
-  .invoice-subtitle {
-    font-size: 18px;
-  }
-  
-  .action-buttons {
-    flex-direction: column;
-  }
-}
-
-@media (max-width: 350px){
-  #products-container { 
-    grid-template-columns: repeat(auto-fit, minmax(110px, 1fr)); 
-  }
-  
-  .product img { height: 90px; }
-  
-  .header-buttons button {
-    font-size: 11px;
-    padding: 4px 6px;
-  }
-  
-  .modal-content {
-    padding: 10px;
-  }
-}
-
 #passwordModal {
   display: none;
   position: fixed;
@@ -641,7 +562,9 @@ header {
   100% { transform: translate(-50%, -50%) scale(1); }
 }
 
+/* التعديلات الأساسية: إخفاء السعر والكمية معًا */
 .hide-price .product-info .price,
+.hide-price .product-info input,
 .hide-price .product button {
   display: none;
 }
@@ -807,9 +730,263 @@ header {
   50% { opacity: 0.6; }
   100% { opacity: 1; }
 }
+
+/* تحسينات التصميم ليكون مشابهًا لأمازون */
+.amazon-style {
+  /* تحسينات عامة للتصميم */
+  background-color: #f8f9fa;
+}
+
+.amazon-style header {
+  background: linear-gradient(to bottom, #232f3e, #131921);
+  padding: 10px 15px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+}
+
+.amazon-style .product {
+  background: white;
+  border: 1px solid #e7e7e7;
+  border-radius: 4px;
+  transition: all 0.3s ease;
+  position: relative;
+  overflow: hidden;
+}
+
+.amazon-style .product:hover {
+  box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+  transform: translateY(-5px);
+  border-color: #c8f3fa;
+}
+
+.amazon-style .product img {
+  border-bottom: 1px solid #e7e7e7;
+  background: white;
+  transition: transform 0.3s ease;
+}
+
+.amazon-style .product:hover img {
+  transform: scale(1.05);
+}
+
+.amazon-style .product-info {
+  padding: 12px;
+  text-align: center;
+}
+
+.amazon-style .product-info .name {
+  font-size: 14px;
+  line-height: 1.4;
+  color: #0f1111;
+  margin-bottom: 8px;
+  height: auto;
+  min-height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.amazon-style .product-info .price {
+  color: #b12704;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.amazon-style .product input {
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  padding: 6px;
+  font-size: 14px;
+  width: 60px;
+  margin-bottom: 8px;
+}
+
+.amazon-style .product button {
+  background: #ffd814;
+  border: none;
+  border-radius: 20px;
+  color: #0f1111;
+  font-weight: bold;
+  padding: 8px 16px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  width: 100%;
+  margin-top: 0;
+}
+
+.amazon-style .product button:hover {
+  background: #f7ca00;
+  transform: scale(1.02);
+}
+
+.amazon-style .header-buttons button {
+  background: #37475a;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 8px 12px;
+  font-size: 13px;
+  transition: background 0.3s;
+}
+
+.amazon-style .header-buttons button:hover {
+  background: #485769;
+}
+
+.amazon-style #notifBtn {
+  background: #ff6f00;
+  animation: none;
+}
+
+.amazon-style #cartBtn {
+  background: #ffa41c;
+}
+
+.amazon-style #clearCartBtn {
+  background: #ff4d4d;
+}
+
+.amazon-style #saveCartBtn {
+  background: #007185;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+.amazon-style #saveCartBtn:hover {
+  background: #005a6b;
+}
+
+.amazon-style .search-container {
+  margin: 15px 0;
+}
+
+.amazon-style #searchBox {
+  border: 2px solid #febd69;
+  border-radius: 4px 0 0 4px;
+  padding: 10px;
+  font-size: 15px;
+}
+
+.amazon-style #offerBtn {
+  background: #ffa41c;
+  border-radius: 0 4px 4px 0;
+  border: 2px solid #febd69;
+  border-left: none;
+}
+
+.amazon-style #offerBtn:hover {
+  background: #fa8900;
+}
+
+/* تحسينات للعرض على مختلف الأجهزة */
+@media (min-width: 768px) {
+  .amazon-style #products-container {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 20px;
+    padding: 20px;
+  }
+  
+  .amazon-style .product img {
+    height: 180px;
+  }
+  
+  .amazon-style .header-buttons {
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: 1024px) {
+  .amazon-style #products-container {
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+    gap: 25px;
+    padding: 25px;
+  }
+  
+  .amazon-style .product img {
+    height: 200px;
+  }
+}
+
+@media (max-width: 480px){
+  body { font-size: 13px; }
+  
+  header { 
+    padding: 8px 3px; 
+    font-size: 16px;
+  }
+  
+  .header-buttons {
+    gap: 3px;
+  }
+  
+  .header-buttons button {
+    padding: 5px 8px;
+    font-size: 12px;
+  }
+  
+  #products-container { 
+    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr)); 
+    gap: 8px;
+    padding: 8px;
+  }
+  
+  .product img { height: 110px; }
+  
+  .product-info .name { 
+    font-size: 13px; 
+    height: 36px;
+  }
+  
+  .product-info .price { font-size: 13px; }
+  
+  .product button { font-size: 12px; }
+  
+  .modal-content {
+    padding: 12px;
+    margin: 10px auto;
+    width: 95%;
+  }
+  
+  .invoice-table {
+    font-size: 14px;
+  }
+  
+  .invoice-table th, 
+  .invoice-table td {
+    padding: 10px 8px;
+  }
+  
+  .invoice-title {
+    font-size: 24px;
+  }
+  
+  .invoice-subtitle {
+    font-size: 18px;
+  }
+  
+  .action-buttons {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 350px){
+  #products-container { 
+    grid-template-columns: repeat(auto-fit, minmax(110px, 1fr)); 
+  }
+  
+  .product img { height: 90px; }
+  
+  .header-buttons button {
+    font-size: 11px;
+    padding: 4px 6px;
+  }
+  
+  .modal-content {
+    padding: 10px;
+  }
+}
 </style>
 </head>
-<body class="hide-price">
+<body class="hide-price amazon-style">
 
 <div id="showPricesBar" onclick="showPasswordModal()">
   👁️ اعرض الأسعار
