--- a/products.html
+++ b/products.html
@@ -819,6 +819,16 @@ header {
   transform: scale(1.02);
 }
 
+/* تحسينات أزرار الهيدر لتكون مشابهة لأمازون */
+.amazon-style .header-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-top: 10px;
+}
+
 .amazon-style .header-buttons button {
   background: #37475a;
   color: white;
@@ -827,6 +837,8 @@ header {
   padding: 8px 12px;
   font-size: 13px;
   transition: background 0.3s;
+  white-space: nowrap;
+  flex: 0 0 auto;
 }
 
 .amazon-style .header-buttons button:hover {
@@ -857,6 +869,10 @@ header {
 
 .amazon-style .search-container {
   margin: 15px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0;
 }
 
 .amazon-style #searchBox {
@@ -864,6 +880,7 @@ header {
   border-radius: 4px 0 0 4px;
   padding: 10px;
   font-size: 15px;
+  width: 250px;
 }
 
 .amazon-style #offerBtn {
@@ -871,6 +888,11 @@ header {
   border-radius: 0 4px 4px 0;
   border: 2px solid #febd69;
   border-left: none;
+  padding: 10px 15px;
+  font-size: 14px;
+  white-space: nowrap;
+  cursor: pointer;
+  transition: background 0.3s;
 }
 
 .amazon-style #offerBtn:hover {
@@ -890,7 +912,11 @@ header {
   }
   
   .amazon-style .header-buttons {
-    justify-content: space-between;
+    justify-content: center;
+  }
+  
+  .amazon-style .search-container {
+    justify-content: center;
   }
 }
 
@@ -903,6 +929,10 @@ header {
   
   .amazon-style .product img {
     height: 200px;
+  }
+  
+  .amazon-style .header-buttons {
+    justify-content: center;
   }
 }
 
@@ -966,6 +996,22 @@ header {
   .action-buttons {
     flex-direction: column;
   }
+  
+  .amazon-style .header-buttons button {
+    font-size: 11px;
+    padding: 6px 8px;
+  }
+  
+  .amazon-style #searchBox {
+    width: 180px;
+    font-size: 13px;
+    padding: 8px;
+  }
+  
+  .amazon-style #offerBtn {
+    font-size: 12px;
+    padding: 8px 10px;
+  }
 }
 
 @media (max-width: 350px){
@@ -982,6 +1028,21 @@ header {
   
   .modal-content {
     padding: 10px;
+  }
+  
+  .amazon-style .header-buttons button {
+    font-size: 10px;
+    padding: 5px 6px;
+  }
+  
+  .amazon-style #searchBox {
+    width: 150px;
+    font-size: 12px;
+  }
+  
+  .amazon-style #offerBtn {
+    font-size: 11px;
+    padding: 7px 8px;
   }
 }
 </style>
@@ -1626,6 +1687,7 @@ document.getElementById("searchBox").addEventListener("input", function(){
   performSearch();
 });
 
+// إصلاح زر "هنبيع ببلاش" ليكون ثابتًا
 document.getElementById("offerBtn").onclick = function(e){
     e.preventDefault();
     const offers = productsData.filter(p => p.offer && p.offer.trim() !== "");
