--- a/products.html
+++ b/products.html
@@ -527,7 +527,7 @@ header {
   transform: translateY(-3px);
 }
 
-/* تنسيق الأسعار للعروض */
+/* تنسيق الأسعار للعروض - تم التعديل هنا */
 .original-price {
   text-decoration: line-through;
   color: #999 !important;
@@ -542,12 +542,30 @@ header {
 }
 
 .discount-percent {
-  background: #ff4444;
+  background: #25d366;
   color: white;
   padding: 2px 6px;
   border-radius: 10px;
   font-size: 10px;
   margin-right: 5px;
+}
+
+/* تحسينات للصورة بحيث لا تتأثر بالعلامات */
+.product-image-container {
+  position: relative;
+  width: 100%;
+  height: 130px;
+  background: #f9f9f9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.product-image-container img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  padding: 5px;
 }
 
 @media (max-width: 480px){
@@ -573,7 +591,7 @@ header {
     padding: 8px;
   }
   
-  .product img { height: 110px; }
+  .product-image-container { height: 110px; }
   
   .product-info .name { 
     font-size: 13px; 
@@ -617,7 +635,7 @@ header {
     grid-template-columns: repeat(auto-fit, minmax(110px, 1fr)); 
   }
   
-  .product img { height: 90px; }
+  .product-image-container { height: 90px; }
   
   .header-buttons button {
     font-size: 11px;
@@ -1088,24 +1106,25 @@ function renderProducts(data, containerElement){
       // إزالة ".." و "&" من الاسم للعرض
       const displayName = item.name ? item.name.replace(/\.\./g, "").replace(/&/g, "") : item.name;
       
-      // حساب السعر بعد الخصم 45% للمنتجات التي تحتوي على "&"
+      // حساب السعر بعد زيادة 45% للمنتجات التي تحتوي على "&"
       const originalPrice = parseFloat(item.price) || 0;
-      const discountPrice = isOfferProduct ? originalPrice * 1.45 : originalPrice;
+      const increasedPrice = isOfferProduct ? originalPrice * 1.45 : originalPrice;
       
       html += `<div class="product ${isNewProduct ? 'new-product' : ''} ${isOfferProduct ? 'offer-product' : ''}">
                   ${isNewProduct ? '<span class="new-product-badge">🆕 جديد</span>' : ''}
                   ${isOfferProduct ? '<span class="offer-product-badge">🎁 عرض خاص</span>' : ''}
-                  <img src="${item.image || 'https://via.placeholder.com/150'}" 
-                       onerror="handleImageError(this)" 
-                       alt="${displayName}" 
-                       loading="lazy"
-                       onload="this.style.display='block'; const placeholder=this.parentNode.querySelector('.image-placeholder'); if(placeholder) placeholder.remove();">
+                  <div class="product-image-container">
+                    <img src="${item.image || 'https://via.placeholder.com/150'}" 
+                         onerror="handleImageError(this)" 
+                         alt="${displayName}" 
+                         loading="lazy">
+                  </div>
                   <div class="product-info">
                     <div class="name">${displayName}</div>
                     ${isOfferProduct ? 
-                      `<div class="price original-price">${formatPrice(originalPrice)} جنيه</div>
+                      `<div class="price original-price">${formatPrice(increasedPrice)} جنيه</div>
                        <div class="price discount-price">
-                         <span class="discount-percent">خصم 45%</span>${formatPrice(discountPrice)} جنيه
+                         <span class="discount-percent">خصم 45%</span>${formatPrice(originalPrice)} جنيه
                        </div>` : 
                       `<div class="price">${formattedPrice} جنيه</div>`
                     }
