--- a/products.html
+++ b/products.html
@@ -1104,7 +1104,7 @@ header {
 
 <!-- شريط الشحن المجاني -->
 <div id="shippingBar" class="shipping-bar">
-  <div>🚚 الشحن مجاني للطلبات فوق 500 جنيه!</div>
+  <div>🚚الشحن مجاني للطلبات ه!</div>
   <div class="shipping-progress">
     <div class="shipping-progress-fill" id="shippingProgress"></div>
   </div>
@@ -1130,7 +1130,7 @@ header {
   </div>
 </header>
 
-<div id="newBanner">🎉 منتجات جديدة اليوم!</div>
+<div id="newBanner">🎉خصم خاص للمناديم دعم من شركة جنة !</div>
 
 <!-- مؤشر التحديث التلقائي -->
 <div id="autoUpdateIndicator" class="auto-update-indicator">🔄 جاري التحديث</div>
@@ -2092,3 +2092,4 @@ setInterval(() => {
 </script>
 </body>
 </html>
+
