--- a/products.html
+++ b/products.html
@@ -1455,7 +1455,7 @@ input, textarea, select {
     <button id="supportBtn">☎️ الدعم الفني</button>
     <button onclick="window.location.href='index.html'">🔙 الرئيسية</button>
     <button id="notifBtn">🔔 منتجات جديده <span id="notif-count">0</span></button>
-    <button id="clearCartBtn" onclick="clearCart()">🗑️ مسح السلة</button>
+    <button id="clearCartBtn" onclick="clearCart()">🗑️ كنسل اوردر</button>
   </div>
 
   <div class="search-container">
@@ -2498,3 +2498,4 @@ function formatWhatsAppInvoice() {
 </script>
 </body>
 </html>
+
